cigionline/static/themes/space_series/css/_article_series_page.scss
body {
  &.space-series-article-series {
    @include top-bar($background-color: $space-series-background-colour, $color: $white);
    background-color: $space-series-background-colour;
    color: $white;
    font-family: $space-series-font-secondary;
    padding-top: 6em;

    .space-series-article-series-hero {
      .hero-content {
        .opinion-series-label {
          color: $cigi-medium-grey;
          font-weight: 500;
          margin-bottom: 1em;
        }

        .title {
          @include media-breakpoint-up(lg) {
            font-size: 2.25em;
            padding-bottom: 0;
          }
          font-family: $space-series-font-primary;
          font-size: calc(3vw + 1em);
          font-weight: 600;
          line-height: 1;
          padding-bottom: 1em;
        }

        .subtitle {
          font-weight: 500;
        }

        .short-description {
          font-size: 0.8em;
        }
      }
    }

    .in-the-series {
      overflow: hidden;

      .swiper {
        position: relative;

        .swiper-container-series {
          @include media-breakpoint-down(md) {
            padding: 0;
          }
          overflow: hidden;
          padding: 0.5em 0;

          .swiper-container-series-content {
            @include media-breakpoint-down(md) {
              padding: 0;
            }
            padding: 1em 0;

            .swiper-wrapper {
              flex-direction: column;

              .category-title {
                border-bottom: 1px solid $cigi-text-grey;
                padding-top: 2em;
              }
            }
          }
        }

        article {
          align-items: center;
          background-color: $space-series-background-colour;
          border-top: 1px solid $cigi-text-grey;
          height: auto;
          position: relative;
          z-index: 0;

          &:first-child {
            border-top: 0;
          }

          &:last-child {
            border-bottom: 1px solid $cigi-text-grey;
          }

          .article-wrapper {
            position: relative;

            .series-item-counter {
              @include media-breakpoint-down(md) {
                display:none;
              }
              background-color: $space-series-background-colour;
              font-family: $space-series-font-primary;
              font-size: 0.8em;
              font-weight: 600;
              position: absolute;
              right: 0;
              text-align: right;
              top: -0.8em;
              width: 2.5em;

              .play-icon-wrapper {
                display: flex;
                justify-content: flex-end;

                .play-icon {
                  align-items: center;
                  color: $white;
                  display: flex;
                  height: 1.5em;
                  justify-content: center;
                  transition: color 0.2s ease;
                  width: 1.5em;

                  * {
                    position: absolute;
                    transition: background-color 0.2s ease;
                  }

                  .outer-circle {
                    border: 0.25em solid $white;
                    border-radius: 50%;
                    height: 1.5em;
                    width: 1.5em;
                    z-index: 1;
                  }

                  i {
                    font-size: 0.5em;
                    z-index: 4;
                  }
                }
              }
            }

            .article-content-wrapper {
              overflow: hidden;

              .article-content {
                align-items: center;
                display: flex;
                position: relative;
                transition: transform 0.2s ease, opacity 0.3s ease;
  
                &:hover {
                  transform: scale(1.025);
                  z-index: 1;
  
                  .series-item-image {
                    transform: scale(1.1);
                  }
                }
  
                .series-item-image {
                  align-items: center;
                  display: flex;
                  flex-shrink: 0;
                  justify-content: center;
                  position: relative;
                  transition: transform 0.2s ease, opacity 0.3s ease;
                  width: 100px;
                }
  
                .series-item-content {
                  @include link($color: $white, $hover-color: $cigi-primary-colour);
                  @include media-breakpoint-up(sm) {
                    margin-left: 3em;
                  }
                  display: flex;
                  flex-direction: column;
                  font-size: 0.8em;
                  height: 100%;
                  justify-content: space-between;
                  margin-left: 2em;
                  padding: 0.5em;
                  width: 100%;
  
                  .series-item-title {
                    font-size: 1.25em;
  
                    &.multimedia-title {
                      width: 85%;
                    }
                  }
  
                  .authors {
                    font-size: 0.9em;
                    margin: 1em 0 0;
                    text-transform: uppercase;
  
                    a {
                      margin-right: 0.2em;
                    }
                  }
                }
              }  
            }
          }
        }
      }
    }
  }
}

